ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes
2012-07-05 Juan Gonzalez <juan.gonzalez@bsc.>
	* Changed 'configure.ac.template' to correctly generate distribution
	packages

2012-07-05 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Changed the random sampling in 'TraceData'. Previous version was buggy
	in 64 bit systems.

	* Changed the 'kalign2' building rules to just compile the files really
	used.

2012-07-03 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Full implementation of 'ClustersSequenceScore' as an independent binary.
	It does not use 'libTraceClustering' due to the bad integration of the
	CSV parser and the library.

	* First implementation of a 'CSVDataExtractor', just with basic features.
	It is a first (experimental) version that does not communicate with the
	Parameters Manager.

	* Erased remaing 'SeqAn' tags/calls/etc.

	* Added 'kalign2' calls to 'system_messages' class to correctly show the
	alignment progress.

	* Added 'system_messages' hooks to call percentage progress from C code.

2012-06-29 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Erased all references to SeqAn library in SequenceScore code. It is still
	pending the license problems of Kalign2

	* Updated the 'svn:keywords' to all new files in added to the package.

2012-06-28 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Major change in 'SequenceScore' algorithm. Remove use of SeqAn library.
	Embedded code of Kalign2 application. It is still experimental but
	lot faster than Muscle (the SeqAn MSA algorithm). The compilation still
	requires SeqAn because of the sequence containers.

	* Added new binary 'ClustersDiff' that compares two CSV cluster result
	files using the Mirkin Distance

	* Added prototypes for 'ClustersSequenceScore' isolated binary that loads